[package]
name = "branded-derive"
version = "0.2.0"
edition = "2021"
authors = ["Mats Jun Larsen <mats@larsendigital.no>"]
repository = "https://github.com/larsendigital/branded"
description = "Branded types for Rust."
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
darling = "0.23"
