[package]
name = "branded"
version = "0.1.3"
edition = "2021"
authors = ["Mats Jun Larsen <mats@larsendigital.no>"]
repository = "https://github.com/larsendigital/branded"
description = "Branded types for Rust."
license = "MIT"
readme = "../README.md"

[features]
default = []
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
uuidv4 = ["dep:uuid", "uuid/v4"]
uuidv7 = ["dep:uuid", "uuid/v7"]

[dependencies]
branded-derive = { path = "../branded-derive", version = "=0.1.3" }

uuid = { version = "1", optional = true, default-features = false, features = ["v4", "v7"] }
sqlx = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite"] }
